--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 # spring.datasource.url=jdbc:mysql://localhost:3306/comicstore?useSSL=false
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/comicstore
 
