--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+jwt.signing.key.secret=mySecret
+jwt.get.token.uri=/authenticate
+jwt.refresh.token.uri=/refresh
+jwt.http.request.header=Authorization
+jwt.token.expiration.in.seconds=604800
+
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -12,6 +18,10 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 logging.level.org.springframework=DEBUG
+
+
+spring.security.user.name=user
+spring.security.user.password=user
 
 
 ## MULTIPART (MultipartProperties)
